# sp

./: .gitignore
conv/: .gitignore  CMakeLists.txt  bracer.pl  inv.cpp  main.cpp  prony.cpp  test.cpp
conv/eigen3/Eigen/src/Core/: DenseBase.h  Matrix.h
conv/eigen3/Eigen/src/SparseCore/: SparseSelfAdjointView.h
conv/lapack_part/: CMakeLists.txt  ddot.c  dscal.c  dsyrk.c  edot.c  egemm.c  egemv.c  epotf2.c  epotrf.c  epotrs.c  escal.c  esyrk.c  etrsm.c  f2c.h  ieeeck.c  ilaenv.c  iparmq.c  lddot.c  ldgemm.c  ldgemv.c  ldpotf2.c  ldpotrf.c  ldpotrs.c  ldscal.c  ldsyrk.c  ldtrsm.c
conv/lapack_part_disabled/: PTIT.c  dgebd2.c  dgebrd.c  dgelqf.c  dgemm.c  dgemv.c  dgetf2.c  dgetrf.c  dgetrs.c  dlabrd.c  dlaed2.c  dlaed3.c  dlaed4.c  dlaed5.c  dlaed8.c  dlanst.c  dlarfb.c  dlasd2.c  dlasd4.c  dlasd6.c  dlasdq.c  dlasq4.c  dlasv2.c  dlasyf.c  dlazq3.c  dlazq4.c  dorgl2.c  dorml2.c  dpotrf.c  dpotrs.c  dsteqr.c  dswap.c  dsyr.c  dsytrf.c  dtrtrs.c  f2c.h  f77_aloc.c  idamax.c  ilaenv.c  open.c  (+2 more)
conv/levmar-2.3/: Axb.c  CMakeLists.txt  lm_core.c  misc_core.c
conv/levmar-2.6/: Axb.cpp  Axb_core.c  Axb_core.cpp  CMakeLists.txt  levmar.h  levmar.h.in  lm.cpp  lm_core.c  lm_core.cpp  lmbc.cpp  lmblec.cpp  lmbleic.cpp  lmlec.cpp  misc.cpp  misc.h  misc_core.cpp
conv/maxima/: bracer.pl  convint.txt  integrate.wxmx  integrate_hann.wxmx  integrate_hann2_10.txt  integrate_hann2_11.txt  integrate_hann_10.txt  integrate_hann_11.txt  integrate_nutall_11.txt  integrate_rect_11.txt  kernel.wxmx  kernel_2.wxmx  kernel_hann2_10.txt  kernel_hann_1.txt  kernel_hann_10.txt  kernel_rect_1.txt  kernel_rect_10.txt
conv/maxima/old/: integrate.wxmx  integrate_nutall_10.txt  kernel_2.wxmx  kernel_hann2_10.txt  kernel_hann2_11.txt
conv/sp/: complex.hpp  config.hpp  convolve.hpp  convolver.cpp  convolver.hpp  kernel.cpp  kernel.hpp  kernelTabled.cpp  kernelTabled.hpp  loadWav.cpp  loadWav.hpp  math.hpp  periodGrid.cpp  periodGrid.hpp  responseModel.cpp  responseModel.hpp  serialization.hpp  signalConvolver.cpp  signalConvolver.hpp  signalConvolverLevel.cpp  signalConvolverLevel.hpp  spectrStore.cpp  spectrStore.hpp  types.hpp  window_hann.hpp  window_hann2.hpp  window_nutall.hpp  window_rect.hpp
conv/sp/cls/: CMakeLists.txt  KDTreeVectorOfVectorsAdaptor.h  kdTree.hpp  main.cpp  patternExtractor.cpp  patternExtractor.hpp  shape.hpp  som.cpp  som.hpp  spectrFetcher.cpp  spectrFetcher.hpp
conv/sp/conv/: CMakeLists.txt  basis.cpp  basis.hpp  drawer.cpp  drawer.hpp  inv.cpp  kernelTabled.cpp  kernelTabled.hpp  kernelTabled_deconvolve2.cpp  linearSolver.cpp  linearSolver.hpp  loadWav.cpp  loadWav.hpp  main.cpp  periodGrid.cpp  periodGrid.hpp  point.cpp  point.hpp  prony.cpp  signalConvolver.cpp  signalConvolver.hpp  signalConvolverLevel.cpp  signalConvolverLevel.hpp  solver.cpp  solver.hpp  spectrStore.cpp  spectrStore.hpp  test.cpp  transformer.cpp  transformer.hpp
conv/sp/utils/: CMakeLists.txt  spectrDumper.cpp  spectrDumper.hpp  spectrStore.cpp  spectrStore.hpp  wavStore.cpp  wavStore.hpp
conv/test/: complex.h  convolCore_meandr.h  convolCore_triangle.h  convolCore_trig.h  convolCore_trig2.h  math.h  responseModel.cpp  responseModel.h  scaledData.cpp  scaledData.h  settings.h  signalProcessor.cpp  signalProcessor.h  types.h
legacy/33/: hel.sln  todo.txt
legacy/33/alglib/: blas.cpp  cholesky.cpp
legacy/33/clapack_part/: dbdsqr.c  dgeqr2.c  dlapy2.c  dlarfg.c  dlas2.c  dlaswp.c  dnrm2.c  dorglq.c  dorm2r.c  dpotf2.c  iparmq.c  open.c
legacy/33/console/: Untitled10.sce  Untitled10_2.sce  Untitled3.sce  Untitled3_md.sce  Untitled3_rc.sce  Untitled43456345.sce  Untitled4546345635.sce  Untitled4_sdfg.sce  Untitled7.sce  _viewOut_extrap.sce  console.cpp  console.vcproj  statistvs.pl  viewOriginalApprox.sce  view_out.sce
legacy/33/core/: core.vcproj
legacy/33/hel/: calibrator_laws.cpp  complex.h  core.cpp  core.h  icore.h  levmar.cpp  levmar.h  math.h  optimizer.cpp  optimizer.cpp.bk  optimizer.cpp.bk2  optimizer.cpp.bk3  optimizer.h  responseModel.cpp  responseModel.h  responseSeparator.cpp  responseSeparator.h  scaledData.cpp  scaledData.h  settings.h  spectrStore.cpp  spectrStore.h  timeMapper.cpp  timeMapper.h  types.h
legacy/33/levmar-2.3/: Axb_core.c  lm_core.c  misc.h
legacy/33/mtDll/: instance.h  stdafx.cpp
legacy/37.one.good/_levmar-2.3/: lm.h
legacy/37.one.good/alglib/: ap.h  lbfgs.cpp  spdsolve.h
legacy/37.one.good/analytic/: kernel_cosian_0.br  kernel_cosian_0p.txt  kernel_simple.txt  kernel_simple_0.br  kernel_simple_0.txt  kernel_simple_src.txt
legacy/37.one.good/clapack_part/: Ptik.c  dgelq2.c  dger.c  dlacpy.c  dlarf.c  dlasd7.c  dormlq.c  drot.c  dsytd2.c  lwrite.c
legacy/37.one.good/console/: Untitled10.sce  Untitled34_tails.sce  Untitled354.sce  Untitled3_response.sce  Untitled3s.sce  Untitled6.sce  _viewOut_spectrumRating.sce  console.cpp
legacy/37.one.good/fftw/: fftw.cpp
legacy/37.one.good/hel/: convolCore_trig.h  levmar.h  log.h  optimizer.cpp  responseModel.cpp  scaledData.cpp  signalProcessor.cpp  test.h
legacy/37.one.good/levmar-2.5/: misc.h
legacy/37.one.good/market/: player.h
legacy/37.one.good/mkl/: blasplus.lib
legacy/37.one.good/mtDll/: mtDll.cpp  params.defs  stdafx.h
legacy/38/: hel.sln
legacy/38/_levmar-2.3/: Axb_core.c
legacy/38/alglib/: minlm.cpp  trinverse.cpp
legacy/39/: hel.sln
legacy/39.middle/: hel.sln  todo.txt
legacy/analytic/: bracer.pl  kxx.txt  kxx20.br  kxx20.txt
legacy/analytic.test/: kernel_simple_src.txt  kxx.br  kxx2.txt  ро.txt  ро2.txt
legacy/nhel2.spectr.smoother/: nhel2.spectr.smoother.sln
legacy/picMaker/: ReadMe.txt  picMaker.cpp  picMaker.sln  picMaker.vcproj  stdafx.cpp  stdafx.h  timeMapper.cpp  timeMapper.h
legacy/txt/: note.odt  мысли.doc  мысли.odt
legacy/Аналитик/: bracer.pl  core3.txt  coreCosian.txt  kernel3.txt  kxx2.br  kxx3.br  kxx3.txt  kxx30.br  kxx30.txt  kxx_coreCosian.br  kxx_coreCosian.txt  kxx_coreCosian_01.br  kxx_coreCosian_01.txt  kxx_coreCosian_01m.br  kxx_coreCosian_01m.txt  kxx_coreCosian_01p.br  kxx_coreCosian_01p.txt  ядро.txt
voxforge/: download.sh
(+768 files in other folders)
